Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriBooleanRetBoolObj.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        boolean two = true
        Yoda<Boolean, boolean, Boolean> yoda
        Boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
