Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBooleanRetintegerFail.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
